--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.2.0",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
