--- a/package.json
+++ b/package.json
@@ -5,9 +5,25 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.{js,ts,tsx,jsx,json,css,scss,html}\"",
+    "prepare": "husky install",
+    "precommit": "lint-staged"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,json,css,scss,html}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@angular/animations": "~17.0.0",
     "@angular/cdk": "^17.0.3",
@@ -48,10 +64,12 @@
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^15.2.0",
     "nx": "17.2.0",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.3.6",
